CorrectAlign

--- a/main.css
+++ b/main.css
@@ -29,7 +29,8 @@ body {
 
 .heart-area {
   margin-bottom: 30px;
-  margin-left: 543.5px;
+  margin-left: 47.5%;
+  align-items: center;
 }
 
 .heart {
@@ -38,6 +39,7 @@ body {
   display: block; /*Centering the image horizontally*/
   margin-left: auto;
   margin-right: auto;
+  align-items: center;
 }
 
 .names-area {
@@ -136,7 +138,7 @@ body {
 }
 
 #heart.filled .fill {
-  height: 32.5px;
+  height: 65px;
 }
 
 #heart .outline {
@@ -229,4 +231,10 @@ body {
   transform: rotate(-45deg);
   border-radius: 85px 60px 0 0;
   transform-origin: 0 100%;
+}
+.percentageText {
+  color: black;
+  font-size: 50px;
+  margin-left: -15%;
+  margin-bottom: 5%;
 }
